tests/build/fail/widget/capture_is_required_for_instance_inherited.stderr
error: missing required property `foo`
  --> $DIR/capture_is_required_for_instance_inherited.rs:17:1
   |
17 | #[widget($crate::test_widget)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
23 |     let _ = test_widget!();
   |             -------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
